@@ -85,3 +85,4 @@ Bug fixes:
 
 * bug 3630 fixed - functions added by 'addinter' are not visible by 'what'
 
+* bug 3604 fixed - Problems with getting Frame uicontrol position (Scilab crash)
